--- a/prologin/prologin/settings.py.example
+++ b/prologin/prologin/settings.py.example
@@ -5,6 +5,7 @@ import os
 DEBUG = True # CHANGEME
 TEMPLATE_DEBUG = DEBUG
 SITE_ROOT = '/path/to/prologin/site/prologin/' # CHANGEME
+CAPTCHA_OUTPUT_FORMAT = '%(image)s %(hidden_field)s %(text_field)s'
 
 ADMINS = (
     # ('Your Name', 'your_email@example.com'),
@@ -145,6 +146,7 @@ INSTALLED_APPS = (
     'team',
     'documents',
     'prologin',
+    'captcha',
 )
 
 # A sample logging configuration. The only tangible logging
