ref #5: basic pages

--- a/prologin/prologin/settings.py.example
+++ b/prologin/prologin/settings.py.example
@@ -146,9 +146,10 @@ INSTALLED_APPS = (
     'django.contrib.admin',
     # Uncomment the next line to enable admin documentation:
     # 'django.contrib.admindocs',
-    'menu',
-    'news',
     'users',
+    'menu',
+    'pages',
+    'news',
     'team',
     'documents',
     'prologin',
