--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 django>=1.6
-psycopg2>=2.5
+django-blog-zinnia==0.15.1
+django-bootstrap-form>=3.1
+django-simple-captcha>=0.4
 Markdown>=2.4
 Pillow>=2.4
-django-simple-captcha>=0.4
-django-bootstrap-form>=3.1
+psycopg2>=2.5
