--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-django>=1.6
+django<1.8
 django-blog-zinnia==0.15.1
 django-bootstrap-form>=3.1
 django-simple-captcha>=0.4
+git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
 Markdown>=2.4
 Pillow>=2.4
 psycopg2>=2.5
