--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 django<1.8
 django-blog-zinnia==0.15.1
+django-bootstrap-breadcrumbs>=0.7.0
 django-bootstrap-form>=3.1
 django-simple-captcha>=0.4
 git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
