--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ django-blog-zinnia==0.15.1
 django-bootstrap-breadcrumbs>=0.7.0
 django-bootstrap-form>=3.1
 django-simple-captcha>=0.4
-flickrapi
 git+https://github.com/bfirsh/django-ordered-model.git@python-3
 git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
 lxml
 Markdown>=2.4
 Pillow>=2.4
 psycopg2>=2.5
+requests
