--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-simple-captcha>=0.4
 django-tagging
 git+https://github.com/bfirsh/django-ordered-model.git@python-3
 git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
+geopy
 lxml
 markdown>=2.4
 pillow>=2.4
