--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-bootstrap-breadcrumbs>=0.7.0
 django-bootstrap-form>=3.1
 django-simple-captcha>=0.4
 django-tagging
+django-timezone-field
 git+https://github.com/bfirsh/django-ordered-model.git@python-3
 git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
 geopy
