--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-bootstrap-form>=3.1
 django-simple-captcha>=0.4
 django-tagging
 django-timezone-field
+djmail>=0.10.0
 git+https://github.com/bfirsh/django-ordered-model.git@python-3
 git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
 geopy
