--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django<1.8
+django<1.9
 django-blog-zinnia==0.15.1
 django-bootstrap-breadcrumbs>=0.7.0
 django-bootstrap-form>=3.1
@@ -7,12 +7,14 @@ django-tagging
 django-timezone-field
 djmail>=0.10.0
 git+https://github.com/bfirsh/django-ordered-model.git@python-3
-git+https://github.com/twidi/django-templates-macros.git#egg=django-templates-macros
+# This is a fork for 1.8 compat
+git+https://github.com/worldveil/django-templates-macros.git#egg=django-templates-macros
 geopy
 lxml
 markdown>=2.4
 pillow>=2.4
 psycopg2>=2.5
+mysqlclient
 requests
 django-debug-toolbar
 celery
