problems: use Pygments instead of Ace for read-only code HL
- remove negative margin hack: fixes collapse bug
- animate collapse indicators (non intrusive JS script)

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,8 @@ markdown>=2.4
 pillow>=2.4
 # Postgres database connector
 psycopg2>=2.5
+# Code highlighting
+pygments>=2.0.2
 # MySQL database connector (for Drupal legacy)
 mysqlclient
 # HTTP queries
