assets: use offline assets except for google fonts; minor CSS fixes
- refactor {,prologin}/.gitignore
- new update-libs.py to download latest version of lib assets
- namespace pages/ statics
- refactor source files for assets outside of publicly available folders

--- a/prologin/.gitignore
+++ b/prologin/.gitignore
@@ -1,10 +1,10 @@
 media/*
+locale/*
+prologin/static/lib/*
+prologin/settings/dev.py
 documents/*.pdf
 documents/*.aux
 documents/*.log
 documents/*.csv
 *.json
 *.sqlite
-users/*.json
-prologin/settings.py
-static/*
