--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ django-blog-zinnia==0.15.2
 django-bootstrap-breadcrumbs>=0.7.0
 # Bootstrap-formatted forms
 django-bootstrap-form>=3.1
+# Content Security Policy, helps prevent XSS & stuff
+django-csp
 # Debug Toolbar
 django-debug-toolbar
 # Google Recaptcha/Nocaptcha support
