migration: events, results, quizzes (with some changes on models)
- Cleaup migrate_from_drupal a bit
- Implement migration for: events, results (notes, assignations) and
  quizzes (QCM questions & user answers)
- Contest models were changed:
	- the 'is_approved' bool on EventWish made no sense, replaced
	  with a assigned_event on Contestant
	- added 'comment' on Sponsor
	- added ContestantCorrection model to keep an history of
	  corrections
- Add Language.guess() that tries "hard" to guess a language from a
  string, eg. 'js' → <Language.Javascript>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# For code charset detection
+chardet
 # For async tasks (sending mails, correcting submissions, etc.)
 celery
 # Django
@@ -26,6 +28,8 @@ git+https://github.com/bfirsh/django-ordered-model.git@python-3
 git+https://github.com/worldveil/django-templates-macros.git#egg=django-templates-macros
 # Tool to query Geoip services for exam center geo-localization
 geopy
+# JSONField() for models
+jsonfield
 # XML parsing (eg. corrector communication)
 lxml
 # Markdown support
