forum: refactor to class-based views; add extra fields; cleanup (WIP)
- add django-guardian to dependencies to manage per-object permissions
- add forum to INSTALLED_APPS
- add migration

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ django-bootstrap-form>=3.1
 django-csp
 # Debug Toolbar
 django-debug-toolbar
+# Fined-tuned (object-level) permissions
+django-guardian
 # Google Recaptcha/Nocaptcha support
 django-recaptcha
 # Model tagging support
