--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,8 @@ pillow>=2.4
 psycopg2>=2.5
 # Code highlighting
 pygments>=2.0.2
+# YAML support
+pyyaml
 # MySQL database connector (for Drupal legacy)
 mysqlclient
 # HTTP queries
