--- a/assets/Makefile
+++ b/assets/Makefile
@@ -10,7 +10,7 @@ PNGOPTIMIZE := optipng -quiet -clobber -preserve
 
 JUMBOTRON_BG := '\#35479a'
 EMOJI_SIZE := 20
-FAVICON_PNG_SIZES := 16 32 96 194
+FAVICON_PNG_SIZES := 16 32 36 48 72 96 144 192 194
 FAVICON_ICO_SIZES := 16 32 48
 APPLE_TOUCH_SIZES := 57 60 72 76 114 120 144 152 180
 MSTILE_SIZES := 70x70 144x144 150x150 310x150 310x310
