contest: staff correction features (from branch staff-correction)
Squashed commit of the following:

commit b5725171892be17f6cae7c4351b8782e2fe9fd40
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Dec 13 16:22:32 2015 +0100

    contest: correction: rework admin menu; warning if user presence is down

commit fd9fd87648cc40ff52ea4919e413e8e5bbf119cc
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Nov 29 22:52:08 2015 +0100

    contest: correction: refactor *all* the things; mostly done

commit fb27e13c12f3e5a2bcd5391575c03079ba4143e7
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Sun Nov 29 04:54:52 2015 +0100

    contest: correction: mostly done but full of dirty hacks (WIP)

commit 39fefa28008f9e6573f6e1f980559f02eae7f21a
Author: Alexandre Macabies <web+git@zopieux.com>
Date:   Thu Nov 26 22:45:52 2015 +0100

    contest: correction: first features (WIP)

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,9 @@ django-bootstrap-breadcrumbs>=0.7.0
 django-bootstrap-form>=3.1
 # Content Security Policy, helps prevent XSS & stuff
 django-csp
+# Datatable (nice jQuery plugin for table handling) adapter
+# TODO: use PyPi version when it's available for 0.9
+git+https://github.com/Zopieux/django-datatable-view.git@master
 # Debug Toolbar
 django-debug-toolbar
 # Export metrics for prometheus monitoring
