--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,9 @@ git+https://github.com/Zopieux/django-datatable-view.git@master
 django-debug-toolbar
 # Form wizards (they were a Django builtin, but split as of 1.8)
 django-formtools
+# Impersonation framework
+# TODO: use upstream when PR are merged
+git+https://github.com/Zopieux/django-hijack.git@prologin
 # Export metrics for prometheus monitoring
 django-prometheus
 # Google Recaptcha/Nocaptcha support
