--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ redis
 # Generic rules/permissions
 rules
 # Transifex client for translation pull/push
-transifex-client==0.11b3
+transifex-client
 # ImageMagick wrapper
 wand
 
