winners history: add 2016's winner

--- a/prologin/prologin/settings/prologin-winners.yaml
+++ b/prologin/prologin/settings/prologin-winners.yaml
@@ -1,5 +1,6 @@
 # Use "!" for "no edition" (don't forget the quotes), leave blank if no data available
 
+2016: Nathanaël Courant
 2015: Clément Villain
 2014: Lucas Pluvinage
 2013: Le Thanh Dung Nguyen
